--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/dropship_crew_chief.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/dropship_crew_chief.yml
@@ -3,6 +3,7 @@
   id: CMDropshipCrewChief
   name: cm-job-name-dcc
   description: cm-job-description-dcc
+  setPreference: false
   playTimeTracker: CMJobDropshipCrewChief
   ranks:
     RMCRankStaffSergeant:
