--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/gunship_pilot.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/gunship_pilot.yml
@@ -3,6 +3,7 @@
   id: CMPilotGunship
   name: cm-job-name-gunship-pilot
   description: cm-job-description-gunship-pilot
+  setPreference: false
   playTimeTracker: CMJobPilotGunship
   ranks:
     RMCRankSecondLT: []
