--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/hospital_corpsman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/hospital_corpsman.yml
@@ -3,6 +3,7 @@
   id: CMHospitalCorpsman
   name: cm-job-name-hospital-corpsman
   description: cm-job-description-hospital-corpsman
+  setPreference: false
   playTimeTracker: CMJobHospitalCorpsman
   ranks:
     RMCRankCorporal:
