--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/smart_gun_operator.yml
@@ -3,6 +3,7 @@
   id: CMSmartGunOperator
   name: cm-job-name-smart-gun-operator
   description: cm-job-description-smart-gun-operator
+  setPreference: false
   playTimeTracker: CMJobSmartGunOperator
   ranks:
     RMCRankCorporal:
