--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Command/staff_officer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Command/staff_officer.yml
@@ -3,7 +3,7 @@
   id: CMStaffOfficer
   name: cm-job-name-platoon-operations-officer
   description: cm-job-description-platoon-operations-officer
-  setPreference: true
+  setPreference: false
   playTimeTracker: CMJobStaffOfficer
   ranks:
     RMCRankSecondLT: []
