--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/fireteam_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/fireteam_leader.yml
@@ -3,9 +3,22 @@
   id: CMFireteamLeader
   name: cm-job-name-fireteam-leader
   description: cm-job-description-fireteam-leader
+  setPreference: false
   playTimeTracker: CMJobFireteamLeader
+  requirements:
+  - !type:DepartmentTimeRequirement
+    department: CMSquad
+    time: 36000 # 10 hours
   ranks:
-    RMCRankSergeant: []
+    RMCRankSergeant:
+    - !type:RoleTimeRequirement
+      role: CMJobFireteamLeader
+      time: 252000 # 70 hours
+    RMCRankCorporal:
+    - !type:RoleTimeRequirement
+      role: CMJobFireteamLeader
+      time: 36000 # 10 hours
+    RMCRankLanceCorporal: []
   startingGear: CMGearFireteamLeader
   dummyStartingGear: CMGearFireteamLeaderEquipped
   icon: "CMJobIconFireteamLeader"
@@ -22,7 +35,7 @@
     - type: Skills
       skills:
         RMCSkillConstruction: 2
-        RMCSkillEngineer: 3
+        RMCSkillEngineer: 2
         RMCSkillFirearms: 1
         RMCSkillFireman: 1
         RMCSkillJtac: 3
