--- a/Resources/Prototypes/_AU14/Entities/Weapons/CCAF/m100mgr.yml
+++ b/Resources/Prototypes/_AU14/Entities/Weapons/CCAF/m100mgr.yml
@@ -18,18 +18,21 @@
       gun_magazine: !type:ContainerSlot
       gun_chamber: !type:ContainerSlot
   - type: Gun
-    projectileSpeed: 20
-    recoilUnwielded: 4
-    scatterWielded: 6
-    scatterUnwielded: 20
-    baseFireRate: 0.45
-    burstScatterMult: 1
     selectedMode: SemiAuto
     availableModes:
     - SemiAuto
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/grenade_launcher.ogg
     resetOnHandSelected: false
+  - type: RMCSelectiveFire
+    baseFireModes:
+    - SemiAuto
+    projectileSpeed: 20
+    recoilUnwielded: 4
+    scatterWielded: 6
+    scatterUnwielded: 20
+    baseFireRate: 0.45
+    burstScatterMult: 1
   - type: GunIFF
     enabled: true
   - type: ShootAtFixedPoint
