--- a/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonpilotofficer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonpilotofficer.yml
@@ -21,7 +21,7 @@
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-govforplatco
   accessGroups:
-  - Colonist
+  - Pilot
   roleWeight: 0.25
   special:
   - !type:AddComponentSpecial
