--- a/Resources/Prototypes/_RMC14/Maps/USSRiptideClassic.yml
+++ b/Resources/Prototypes/_RMC14/Maps/USSRiptideClassic.yml
@@ -1,6 +1,6 @@
 - type: gameMap
   id: RiptideClassic
-  mapName: USS Riptide (Classic)
+  mapName: USS Riptide (Classic USCM)
   mapPath: /Maps/_RMC14/USSRiptide.yml
   minPlayers: 0
   maxPlayers: 75
@@ -11,54 +11,12 @@
       stationProto: StandardUNMCWarship
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'USS Riptide Clasic'
+          mapNameTemplate: 'USS Riptide'
         - type: StationJobs
           availableJobs:
-            # Command
-            CMCommandingOfficer: [0, 0]
-            CMExecutiveOfficer: [1, 1]
-            CMStaffOfficer: [0, 0]
-            CMSeniorEnlistedAdvisor: [0, 0]
-
-            # Military Police
-            CMChiefMP: [0, 0]
-            CMMilitaryWarden: [0, 0]
-            CMMilitaryPolice: [0, 0]
-
-            # Auxiliary
-            CMAuxiliarySupportOfficer: [0, 0]
-            CMIntelOfficer: [0, 0]
-            CMPilotDropship: [0, 0]
-            CMPilotGunship: [0, 0]
-            CMDropshipCrewChief: [0, 0]
-
-            # Engineering
-            CMChiefEngineer: [0, 0]
-#            CMOrdnanceTech: [3, 3]
-            CMMaintTech: [0, 0]
-
-            # Medical
-            CMCMO: [0, 0]
-            CMDoctor: [0, 0]
-            CMNurse: [0, 0]
-#            CMResearcher: [2, 2]
-
-            # Requisition
-            CMQuartermaster: [0, 0]
-            CMCargoTech: [0, 0]
-#            CMMessTech: [1, 1]
-
-            # Marines
-            CMSquadLeader: [1, 1]
-            CMFireteamLeader: [2, 2]
-            CMSmartGunOperator: [2, 2]
-            CMWeaponsSpecialist: [0, 0]
-            CMCombatTech: [0, 0]
-            CMHospitalCorpsman: [1, 1]
-            CMRifleman: [4, 4]
-
-            # Civilians
-            CMCorrespondent: [0, 0]
-
-            # Other
-            CMLiaison: [0, 0]
+            AU14JobGOVFORPlatCo: [1, 1]
+            AU14JobGOVFORSectionSergeant: [1, 1]
+            AU14JobGOVFORSquadSergeant: [2, 2]
+            AU14JobGOVFORSquadRifleman: [2, 2]
+            AU14JobGOVFORSquadAutomaticRifleman: [1, 1]
+            AU14JobGOVFORPlatoonCorpsman: [1, 1]
