--- a/Resources/Prototypes/_RMC14/Maps/USSRiptideLACNClassic.yml
+++ b/Resources/Prototypes/_RMC14/Maps/USSRiptideLACNClassic.yml
@@ -1,7 +1,7 @@
 - type: gameMap
-  id: Riptide
-  mapName: USS Riptide (USCM)
-  mapPath: /Maps/_RMC14/USSRiptide.yml
+  id: RiptideLACNClassic
+  mapName: USS Riptide (Classic LACN)
+  mapPath: /Maps/_RMC14/USSRiptideLACN.yml
   minPlayers: 0
   maxPlayers: 75
   maxRandomOffset: 0
@@ -15,9 +15,6 @@
         - type: StationJobs
           availableJobs:
             AU14JobGOVFORPlatCo: [1, 1]
-            AU14JobGOVFORPlatOp: [1, 1]
-            AU14JobGOVFORDSPilot: [1, 1]
-            AU14JobGOVFORDCC: [1, 1]
             AU14JobGOVFORSectionSergeant: [1, 1]
             AU14JobGOVFORSquadSergeant: [2, 2]
             AU14JobGOVFORSquadRifleman: [2, 2]
