--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfdoctor.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfdoctor.yml
@@ -23,6 +23,10 @@
         RMCSkillFireman: 1
         RMCSkillVehicles: 1
         RMCSkillDomestics: 1
+        RMCSkillMedical: 3
+        RMCSkillResearch: 1
+        RMCSkillSurgery: 2
+        RMCSkillFirearms: 1
     - type: JobPrefix
       prefix: au14-job-prefix-clfphysician
     - type: TacticalMapIcon
