--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbdeputy.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbdeputy.yml
@@ -51,6 +51,7 @@
     shoes: RMCBootsPMCFilled
     id: AU14IDCardColonyCMBDeputy
     ears: CMHeadsetColony
+    outerClothing: AU14CMBDeputyWindbreaker
 
 - type: entity
   parent: CMSpawnPointJobBase
