--- a/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonoperationsofficer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonoperationsofficer.yml
@@ -8,10 +8,11 @@
   ranks:
     RMCRankSecondLT: []
   startingGear: AU14GearGOVFORPlatOp
+  dummyStartingGear: AU14GearGOVFORPlatOpDummy
   icon: "CMJobIconStaffOfficer"
   requireAdminNotify: true
   joinNotifyCrew: false
-  supervisors: au14-job-supervisors-govforplatco
+  supervisors: au14-job-supervisors-govfor
   accessGroups:
   - Colonist
   roleWeight: 0.25
@@ -62,3 +63,10 @@
 - type: playTimeTracker
   id: AU14JobGOVFORPlatOp
   isHumanoid: true
+
+- type: startingGear
+  id: AU14GearGOVFORPlatOpDummy
+  equipment:
+    shoes: CMBootsBlack
+    head: AU14JunglePatrolCap
+    jumpsuit: CMJumpsuitXOFormal
