--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
@@ -20,9 +20,12 @@
     components:
     - type: Skills
       skills:
+        RMCSkillEndurance: 1
+        RMCSkillFirearms: 1
+        RMCSkillConstruction: 2
+        RMCSkillEngineer: 3
         RMCSkillFireman: 1
         RMCSkillVehicles: 1
-        RMCSkillDomestics: 1
     - type: JobPrefix
       prefix: au14-job-prefix-clfguerilla
     - type: TacticalMapIcon
