--- a/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonpilotofficer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Military/platoonpilotofficer.yml
@@ -16,10 +16,11 @@
       time: 3600 # 60 hours
     RMCRankSecondLT: []
   startingGear: AU14GearGOVFORDSPilot
+  dummyStartingGear: AU14GearGOVFORDSPilotDummy
   icon: "CMJobIconPilotDropship"
   requireAdminNotify: true
   joinNotifyCrew: false
-  supervisors: au14-job-supervisors-govforplatco
+  supervisors: au14-job-supervisors-govfor
   accessGroups:
   - Pilot
   roleWeight: 0.25
@@ -64,3 +65,13 @@
 - type: playTimeTracker
   id: AU14JobGOVFORDSPilot
   isHumanoid: true
+
+- type: startingGear
+  id: AU14GearGOVFORDSPilotDummy
+  equipment:
+    outerClothing: AU14USASFICPS2
+    shoes: CMBootsBrown
+    mask: AU14MaskUSASFPilotOxygen
+    head: AU14USASFAirCrewHelmet
+    jumpsuit: AU14USASFPilotJumpsuit
+    eyes: AU14GogglesLACNLAH99VisorMirror
