--- a/Resources/Prototypes/_AU14/SoundCollections/warcry.yml
+++ b/Resources/Prototypes/_AU14/SoundCollections/warcry.yml
@@ -36,6 +36,8 @@
   - /Audio/_AU14/Voice/Warcrys/warcry_male_33.ogg
   - /Audio/_AU14/Voice/Warcrys/warcry_male_34.ogg
   - /Audio/_AU14/Voice/Warcrys/warcry_male_35.ogg
+  - /Audio/_AU14/Voice/Warcrys/warcry_male_36.ogg
+  - /Audio/_AU14/Voice/Warcrys/malewarcry.ogg
 
 - type: soundCollection
   id: AU14FemaleWarcry
@@ -60,3 +62,9 @@
   - /Audio/_AU14/Voice/Warcrys/warcry_female_18.ogg
   - /Audio/_AU14/Voice/Warcrys/warcry_female_19.ogg
   - /Audio/_AU14/Voice/Warcrys/warcry_female_20.ogg
+  - /Audio/_AU14/Voice/Warcrys/femalewarcry.ogg
+  - /Audio/_AU14/Voice/Warcrys/femalewarcry2.ogg
+  - /Audio/_AU14/Voice/Warcrys/femalewarcry3.ogg
+  - /Audio/_AU14/Voice/Warcrys/femalewarcry4.ogg
+  - /Audio/_AU14/Voice/Warcrys/femalewarcry5.ogg
+  - /Audio/_AU14/Voice/Warcrys/femalewarcry6.ogg
