--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbdeputy.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbdeputy.yml
@@ -17,6 +17,7 @@
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
+  - aucmb
   - Colonist
   roleWeight: 0.25
   special:
