--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbmarshal.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycmbmarshal.yml
@@ -13,6 +13,8 @@
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
+  - auadmin
+  - aucmb
   - Colonist
   roleWeight: 0.25
   special:
@@ -58,6 +60,23 @@
     job_id: AU14JobCivilianCMBMarshal
   - type: Sprite
     state: syn_spawn
+- type: entity
+  parent: MarkerBase
+  id: aumarshallghost
+  name: Marshall colonist ghost role
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+  - type: RandomHumanoidSpawner
+    settings: Aughostmarshall
+
+- type: randomHumanoidSettings
+  parent: RMCSettingsGhostRole
+  id: Aughostmarshall
+  components:
+  - type: RMCJobSpawner
+    job: AU14JobCivilianCMBMarshal
 
 - type: playTimeTracker
   id: AU14JobCivilianCMBMarshal
