--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
@@ -26,6 +26,7 @@
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
   - Colonist
+  - auwy
   roleWeight: 0.25
   special:
   - !type:AddComponentSpecial
