--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyemergencyresponseofficer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyemergencyresponseofficer.yml
@@ -18,6 +18,7 @@
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
   - Colonist
+  - aumed
   roleWeight: 0.25
   special:
   - !type:AddComponentSpecial
