--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyengineer.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyengineer.yml
@@ -14,6 +14,7 @@
   supervisors: au14-job-supervisors-colonyadministrator
   accessGroups:
   - Colonist
+  - auengi
   roleWeight: 0.25
   special:
   - !type:AddComponentSpecial
