--- a/Resources/Prototypes/_AU14/Roles/Departments/au14_colony_department.yml
+++ b/Resources/Prototypes/_AU14/Roles/Departments/au14_colony_department.yml
@@ -78,5 +78,8 @@
   - AU14JobCivilianCMBMarshal
   - AU14JobCivilianEcologist
   - AU14JobCivilianUSASFRecruiter
+  - AU14JobCivilianMiner
+  - AU14JobCivilianprisoner
+  - AU14jobcivilianKellandWarden
   departmentRadio: null
   headOfDepartment: null
