--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyadministrator.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyadministrator.yml
@@ -17,6 +17,7 @@
   joinNotifyCrew: false
   supervisors: au14-job-supervisors-colonyadministrator
   accessGroups:
+  - auadmin
   - Colonist
   roleWeight: 0.25
   special:
