--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
@@ -14,6 +14,7 @@
   supervisors: au14-job-supervisors-colonycivilian
   accessGroups:
   - Colonist
+  - auadmin
   roleWeight: 0.25
   special:
   - !type:AddComponentSpecial
