Fixed various issues, added ghost role spawns

--- a/Resources/Prototypes/_AU14/Roles/Departments/au14_colony_department.yml
+++ b/Resources/Prototypes/_AU14/Roles/Departments/au14_colony_department.yml
@@ -77,8 +77,8 @@
   - AU14JobCivilianCMBMarshal
   - AU14JobCivilianEcologist
   - AU14JobCivilianUSASFRecruiter
-  - AU14JobCivilianMiner
-  - AU14JobCivilianprisoner
+  - AU14Jobcivilianminer
+  - AU14Jobcivilianprisoner
   - AU14jobcivilianKellandWarden
   departmentRadio: null
   headOfDepartment: null
