Headsets and colony vendor.

--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyadministrator.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyadministrator.yml
@@ -51,8 +51,10 @@
     jumpsuit: CMJumpsuitLiaisonBlack
     shoes: RMCShoesLaceupBrown
     id: AU14IDCardColonyAdministrator
-    ears: CMHeadsetColony
+    ears: AU14ColonyAdminHeadset
     outerClothing: RMCJacketCorporateBlue
+  inhand:
+  - RMCRadioHandheldColonyOff
 
 - type: entity
   parent: CMSpawnPointJobBase
