--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonycorporateliaison.yml
@@ -51,7 +51,7 @@
     jumpsuit: AU14CivilianWorkwearBlue
     shoes: RMCShoesLaceup
     id: AU14IDCardColonyCorporateLiaison
-    ears: CMHeadsetColony
+    ears: RMCHeadsetDistressWeYaColony
     outerClothing: AU14CivilianJacketOrangePufferJacket
 
 - type: entity
