--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyforeman.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonyforeman.yml
@@ -46,7 +46,7 @@
     jumpsuit: AU14CivilianWeYuEngineerFormanClothes
     shoes: RMCBootsCorporate
     id: AU14IDCardColonyForeman
-    ears: CMHeadsetColony
+    ears: AU14ColonyAdminHeadset
 
 - type: entity
   parent: CMSpawnPointJobBase
