--- a/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/Colony/colonysynth.yml
@@ -98,9 +98,7 @@
     jumpsuit: RMCJumpsuitCivilian
     shoes: RMCBootsCorporate
     id: AU14IDCardColonySynthetic
-    ears: CMHeadsetColony
-  inhand:
-  - RMCSmartpackBlack
+    ears: AU14ColonyAdminHeadset
 
 - type: entity
   parent: CMSpawnPointJobBase
