--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfcellleader.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfcellleader.yml
@@ -54,7 +54,7 @@
     head: AU14CivBallCapBlack
     jumpsuit: CMJumpsuitColonist
     id: CMIDCardColonist
-    ears: CMHeadsetColony
+    ears: AU14CLFHeadset
     eyes: RMCGlassesAviators
   inhand:
   - RMCWeaponRifleType71
