--- a/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
+++ b/Resources/Prototypes/_AU14/Roles/Jobs/CLF/clfguerilla.yml
@@ -40,7 +40,7 @@
     jumpsuit: CMJumpsuitColonist
     shoes: RMCBootsPMCFilled
     id: CMIDCardColonist
-    ears: CMHeadsetColony
+    ears: AU14CLFHeadset
     neck: RMCCLFArmband
 
 - type: entity
